cloud-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
spec:
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
      - name: cloud-gateway-app
        image: kishore5357/cloudgateway
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  type: LoadBalancer
  selector:
    app: cloud-gateway-app
  ports:
  - port: 80
    targetPort: 9090
