config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-app
spec:
  selector:
    matchLabels:
      app: config-server-app
  template:
    metadata:
      labels:
        app: config-server-app
    spec:
      containers:
      - name: config-server-app
        image: kishore5357/configserver
        imagePullPolicy: Always
        ports:
        - containerPort: 9296
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: config-server-app
  ports:
  - port: 80
    targetPort: 9296
