ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
 # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
   # nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      # Cloud Gateway
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-gateway-svc
            port:
              number: 80
      # Config Server
      - path: /config
        pathType: Prefix
        backend:
          service:
            name: config-server-svc
            port:
              number: 80
      # Eureka
      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: eureka
            port:
              number: 8761
      # Order Service
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service-svc
            port:
              number: 80
      # Payment Service
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service-svc
            port:
              number: 80
      # Product Service
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service-svc
            port:
              number: 80
      # Zipkin
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin-svc
            port:
              number: 9411
